--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "randomstring": "^1.3.0"
   }
 }
